# cpp-best-prac-with-code

./: .gitignore  CMakeLists.txt  README.md  alignment  alignment.cpp  hash_map.cpp  shared_ptr.cpp  shared_ptr_impl.cpp  smart_ptr_mem_leak.cpp  template_meta.cpp  virtual_destructor.cpp  why_weak_ptr.cpp
inline_func/: inline  inline1.cpp  inline2.cpp
